<resources>
    <string name="app_name">SMART DOCTORS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Your Username</string>
    <string name="prompt_password">Enter Your Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to smart doctors"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Doctors</string>
    <string name="notify"> Doctor added succesfully</string>
    <string name="nav_header_subtitle">info@smartdoctors.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="description">hello_world</string>
    <string name="deptinfo">Recent Appointmens</string>
    <string name="prevapp">Previous Appointments</string>
    <string name="getintouch">Get in Touch</string>
    <string name="whoweare">Who we are</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="personalprofile">Personal Profile</string>
</resources>
