<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/txtDeptINFO">

    <fragment
        android:id="@+id/txtDeptINFO"
        android:name="com.example.doctors.ui.home.HomeFragment"
        android:label="@string/deptinfo"
        tools:layout="@layout/department_info" />

    <fragment
        android:id="@+id/txtPrevApp"
        android:name="com.example.doctors.ui.gallery.GalleryFragment"
        android:label="@string/prevapp"
        tools:layout="@layout/previous_appointments" />

    <fragment
        android:id="@+id/txtGetintouch"
        android:name="com.example.doctors.ui.slideshow.SlideshowFragment"
        android:label="@string/getintouch"
        tools:layout="@layout/getintouch" />

    <fragment
        android:id="@+id/txtwhoweare"
        android:name="com.example.doctors.ui.tools.ToolsFragment"
        android:label="@string/whoweare"
        tools:layout="@layout/whoweare" />


</navigation>